# Api-Gateway

./: .env  docker-compose-github.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: github-actions-deploy-linter.yml
nginx/: nginx.conf
src/gateway/: depends.py  repository.py  router.py  service.py
src/settings/: db.py  depends.py  repository.py  service.py  settings.py
